My form + validation

--- a/index.html
+++ b/index.html
@@ -1,3 +1,88 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>TItle</title>
+    <style>
+        .container {
+            width:100%;
+            height:100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 24px;
+        }
+        .form-input
+        {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        input[type=submit] {
+            width: 100%;
+            height: 30px;
+            background-color: aquamarine;
+        }
+        input[type=submit]:hover {
+            cursor:pointer;
+            background-color: chartreuse;
+        }
+        input[type=submit]:active {
+            cursor:pointer;
+            background-color: black;
+        }
 
+        .input-error {
+            border-color:red;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <h1>Форма регистрации</h1>
+    <form>
+        <div class="form-input">
+            <label for="name-input">Введите свое имя</label>
+            <input type="text" id="name-input" placeholder="Имя"/>
+        </div>
+        <div class="form-input">
+            <label for="password-input">Введите свое имя</label>
+            <input type="password" id="password-input" placeholder="Пароль"/>
+        </div>
+        <div class="form-input">
+            <label for="user-type-input">Выберите тип пользователя</label>
+            <select id="user-type-input">
+                <option value="Admin">Администратор</option>
+                <option value="Miderator">Модератор</option>
+                <option value="User">Пользователь</option>
+            </select>
+        </div>
+        <input type="submit" value="submit form"/>
+    </form>
+</div>
+
+
+<script type="text/javascript">
+    const nameInput=document.querySelector("#user-name-input")
+    let inputValue;
+    nameInput.addEventListener("input",()=> {
+        inputValue=nameInput.value
+        console.log(inputValue);
+    })
+
+    nameInput.addEventListener("blur",()=> {
+        if (!inputValue || inputValue.length<4){
+            nameInput.className="input-error"
+        }
+    })
+</script>
+</body>
 </html>
