--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
             border-color:red;
         }
         .input-true {
-            border-color:back;
+            border-color:black;
         }
     </style>
 </head>
